argocd/demo/bg-demo/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: bg-demo
  namespace: demo
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: bg-demo
  template:
    metadata:
      labels:
        app: bg-demo
    spec:
      containers:
        - name: rollouts-demo
          image: argoproj/rollouts-demo:blue
          ports:
            - containerPort: 8080
  strategy:
    blueGreen:
      activeService: bg-demo-active
      previewService: bg-demo-preview
      autoPromotionEnabled: false
