argocd/demo/bg-demo/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bg-demo-active
  namespace: demo
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app: bg-demo
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bg-demo-preview
  namespace: demo
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app: bg-demo
  ports:
    - port: 80
      targetPort: 8080
